--- a/Java_ORM_standard_JPA_programming/example/src/main/resources/application.properties
+++ b/Java_ORM_standard_JPA_programming/example/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 
+# MySQL ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# DB Source URL
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jpa
+
+# DB username
+spring.datasource.username=root
+
+# DB password
+spring.datasource.password=0000
+
+# true ??? JPA ??? ?? ??
+spring.jpa.show-sql=true
+
+# DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
+spring.jpa.hibernate.ddl-auto=update
+
+# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
+spring.jpa.properties.hibernate.format_sql=true
+
+# Devtools ??
+spring.devtools.livereload.enabled=true
+spring.web.resources.static-locations=file:src/main/resources/static/
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
